--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -15,13 +15,13 @@ size-transition = true
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 15.0;
+corner-radius = 10.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   #"class_g = 'awesome'",
   "class_g = 'URxvt'",
   "class_g = 'XTerm'",
-  "class_g = 'kitty'",
+  #"class_g = 'kitty'",
   #"class_g = 'Alacritty'",
   "class_g = 'Polybar'",
   "class_g = 'code-oss'",
@@ -51,15 +51,15 @@ shadow = true;
 shadow-radius = 7;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-shadow-opacity = .25
+shadow-opacity = .21;
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -7;
+shadow-offset-x = 0;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -7;
+shadow-offset-y = 0;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
@@ -208,7 +208,7 @@ opacity-rule = [
   "100:class_g    = 'slop'",            # maim
   "100:class_g    = 'XTerm'",
   "100:class_g    = 'URxvt'",
-  "100:class_g    = 'kitty'",
+ #"100:class_g    = 'kitty'",
   "100:class_g    = 'Alacritty'",
   "80:class_g     = 'Polybar'",
   "100:class_g    = 'code-oss'",
